testing/tests/ui/multiple_extends.stderr
error: multiple extend blocks found
 --> MyTemplate4.txt:3:2
       " extends \"foo.html\" %}\n"
 --> tests/ui/multiple_extends.rs:4:21
  |
4 |   #[template(source = r#"
  |  _____________________^
5 | | {% extends "let.html" %}
6 | | {% extends "foo.html" %}
7 | | "#, ext = "txt")]
  | |__^
